--- a/sbp-table.tex
+++ b/sbp-table.tex
@@ -1,49 +1,49 @@
-\begin{center}
-%	\hakan{Mette des espaces pour les nombres et texte pour expliquer si tableau ok}\\
-%	\hakan{Mettre total de clause et vars et pourcentage d'augmentation}
+﻿\begin{center}
+% \hakan{Mette des espaces pour les nombres et texte pour expliquer si tableau ok}\\
+% \hakan{Mettre total de clause et vars et pourcentage d'augmentation}
 %
 \begin{table}[!htbp]
 \begin{tabular}{lcccc}
-	Instances & \#vars & \#clause & \#sbp & \#auxiliary variables \\
-	\toprule
-	\detokenize{battleship-12-12-unsat} &  936 &  144 &  1498 &  378\\
-	\detokenize{battleship-12-23-sat} &  1662 &  276 &  5464 &  1375\\
-	\detokenize{battleship-14-26-sat} &  2562 &  364 &  3688 &  929\\
-	\detokenize{battleship-14-27-sat} &  2653 &  378 &  7222 &  1814\\
-	\detokenize{battleship-16-16-unsat} &  2176 &  256 &  4388 &  1102\\
-	\detokenize{battleship-16-31-sat} &  3976 &  496 &  12094 &  3035\\
-	\detokenize{battleship-24-57-sat} &  16308 &  1368 &  40372 &  10113\\
-	\midrule
-	\detokenize{chnl10_11} &  1122 &  220 &  2416 &  615\\
-	\detokenize{chnl10_12} &  1344 &  240 &  2736 &  696\\
-	\detokenize{chnl10_13} &  1586 &  260 &  3252 &  826\\
-	\detokenize{chnl11_12} &  1476 &  264 &  3204 &  813\\
-	\detokenize{chnl11_13} &  1742 &  286 &  3636 &  922\\
-	\detokenize{chnl11_20} &  4220 &  440 &  6760 &  1710\\
-	\midrule
-	\detokenize{fpga10_15_uns_rcr} &  2130 &  300 &  4580 &  1160\\
-	\detokenize{fpga10_20_uns_rcr} &  3840 &  400 &  6768 &  1712\\
-	\detokenize{fpga11_12_uns_rcr} &  1476 &  264 &  3704 &  938\\
-	\detokenize{fpga11_13_uns_rcr} &  1742 &  286 &  4076 &  1032\\
-	\detokenize{fpga11_14_uns_rcr} &  2030 &  308 &  4740 &  1199\\
-	\detokenize{fpga11_15_uns_rcr} &  2340 &  330 &  5196 &  1314\\
-	\detokenize{fpga11_20_uns_rcr} &  4220 &  440 &  7864 &  1986\\
-	\midrule
-	\detokenize{hole010} &  561 &  110 &  1054 &  269\\
-	\detokenize{hole015} &  1816 &  240 &  3280 &  828\\
-	\detokenize{hole020} &  4221 &  420 &  6478 &  1630\\
-	\detokenize{hole030} &  13981 &  930 &  21322 &  5346\\
-	\detokenize{hole040} &  32841 &  1640 &  44934 &  11254\\
-	\detokenize{hole050} &  63801 &  2550 &  81682 &  20446\\
-	\midrule
-	\detokenize{Urq6_5} &  1756 &  180 &  109 &  0\\
-	\detokenize{Urq7_5} &  2194 &  240 &  143 &  0\\
-	\detokenize{Urq8_5} &  3252 &  327 &  200 &  0\\
-	\midrule
-	\detokenize{x1_40} &  314 &  118 &  42 &  1\\
-	\detokenize{x1_80} &  634 &  238 &  80 &  0\\
+ Instances & \#vars & \#clause & \#sbp & \#auxiliary variables \\
+ \toprule
+ \detokenize{battleship-12-12-unsat} &  936 &  144 &  1498 &  378\\
+ \detokenize{battleship-12-23-sat} &  1662 &  276 &  5464 &  1375\\
+ \detokenize{battleship-14-26-sat} &  2562 &  364 &  3688 &  929\\
+ \detokenize{battleship-14-27-sat} &  2653 &  378 &  7222 &  1814\\
+ \detokenize{battleship-16-16-unsat} &  2176 &  256 &  4388 &  1102\\
+ \detokenize{battleship-16-31-sat} &  3976 &  496 &  12094 &  3035\\
+ \detokenize{battleship-24-57-sat} &  16308 &  1368 &  40372 &  10113\\
+ \midrule
+ \detokenize{chnl10_11} &  1122 &  220 &  2416 &  615\\
+ \detokenize{chnl10_12} &  1344 &  240 &  2736 &  696\\
+ \detokenize{chnl10_13} &  1586 &  260 &  3252 &  826\\
+ \detokenize{chnl11_12} &  1476 &  264 &  3204 &  813\\
+ \detokenize{chnl11_13} &  1742 &  286 &  3636 &  922\\
+ \detokenize{chnl11_20} &  4220 &  440 &  6760 &  1710\\
+ \midrule
+ \detokenize{fpga10_15_uns_rcr} &  2130 &  300 &  4580 &  1160\\
+ \detokenize{fpga10_20_uns_rcr} &  3840 &  400 &  6768 &  1712\\
+ \detokenize{fpga11_12_uns_rcr} &  1476 &  264 &  3704 &  938\\
+ \detokenize{fpga11_13_uns_rcr} &  1742 &  286 &  4076 &  1032\\
+ \detokenize{fpga11_14_uns_rcr} &  2030 &  308 &  4740 &  1199\\
+ \detokenize{fpga11_15_uns_rcr} &  2340 &  330 &  5196 &  1314\\
+ \detokenize{fpga11_20_uns_rcr} &  4220 &  440 &  7864 &  1986\\
+ \midrule
+ \detokenize{hole010} &  561 &  110 &  1054 &  269\\
+ \detokenize{hole015} &  1816 &  240 &  3280 &  828\\
+ \detokenize{hole020} &  4221 &  420 &  6478 &  1630\\
+ \detokenize{hole030} &  13981 &  930 &  21322 &  5346\\
+ \detokenize{hole040} &  32841 &  1640 &  44934 &  11254\\
+ \detokenize{hole050} &  63801 &  2550 &  81682 &  20446\\
+ \midrule
+ \detokenize{Urq6_5} &  1756 &  180 &  109 &  0\\
+ \detokenize{Urq7_5} &  2194 &  240 &  143 &  0\\
+ \detokenize{Urq8_5} &  3252 &  327 &  200 &  0\\
+ \midrule
+ \detokenize{x1_40} &  314 &  118 &  42 &  1\\
+ \detokenize{x1_80} &  634 &  238 &  80 &  0\\
 \end{tabular}
-	\caption{Number of sbps generated on different problem categories}
-	\label{tab:numsbp}
-\end{table}	
+ \caption{Number of sbps generated on different problem categories}
+ \label{tab:numsbp}
+\end{table} 
 \end{center}
